Send the hostname by default unless null, (none) or localhost.
This can be overridden by using a an empty option for -h (-h '').

dhcpcd-3.0.3
NIS setup (yp.conf / domainname) works again.
Send hostname/fqdn in DISCOVER and INFORM messages too.
Add more debug messages.
Fix writing to resolv.conf when resolvconf not present.
Include linux/if_addr.h for 2.6.19+ kernels, thanks to AlexExtreme.

dhcpcd-3.0.2
Linux systems without glibc-2.3 don't have getifaddrs, so we define our own.
Changed the default timeout to 20 seconds, allowing hme Sparc drivers to work.
Set the rfds correctly so we can get a reply after re-sending a request.
Set the seconds elasped and maximum message size correctly in DHCP messages.
Now compiles on Linux 2.4 kernels. 
xmalloc dhcp objects so we can swap the pointers around easily.

dhcpcd-3.0.1
Quote all vars in the info file.
-n and -G options now work as stated in the man page.
Handle select loops with large timeouts and infinite lease times.
Correctly set the broadcast flag.
make_dhcp_packet already has byte ordered addresses, thanks to TGL
for the fix.
If we get a NAK then always re-enter the INIT state.

dhcpcd-3.0.0
A complete rewrite by Roy Marples <uberlord@gentoo.org>

Functional changes since version 2:
We now support FreeBSD as well as Linux.
RFC 3004 User Class support has been added.
RFC 3442 Classless Static Routes support has been added
(thanks to apexman for helping).
Options -r, -e, -v, -w, -B, -C, -D, -L, -S have been dropped.
-a now means "do arp" instead of "don't arp".
-o has been dropped, but we never bring down the interface anymore.
IP address is now required for the -s option.
-G no longer takes an IP address as an replacement gateway.
The .cache file is no longer created or used.
Default script is now /etc/dhcpcd.sh instead of /etc/dhcpc/dhcpcd.exe.
The .info file has changed slightly to better support mulitple entries with
more than one entity, such as route now having network,genmask and gateway.